--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "material-icons": "^1.13.12",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
