--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "react-responsive": "^9.0.2"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
