--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.45.0",
+    "@tanstack/react-query-devtools": "^5.45.0",
     "aos": "^3.0.0-beta.6",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "js-cookie": "^3.0.5",
     "material-icons": "^1.13.12",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "swiper": "^11.0.5",
-    "react-responsive": "^9.0.2"
+    "react-hook-form": "^7.52.0",
+    "react-responsive": "^9.0.2",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
