首頁串接 房屋狀況  api

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-BASE_URL="https://homesecuritypro-expressapi.onrender.com/"
+# BASE_URL="https://homesecuritypro-expressapi.onrender.com/"
+BASE_URL="https://workspace.raychen.co.uk/graphql"
+# BASE_URL="https://homesecuritypro-expressapi-production.up.railway.app"
+ 
