--- a/package.json
+++ b/package.json
@@ -21,7 +21,23 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-responsive": "^9.0.2",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "zustand": "^4.5.2",
+    "@apollo/client": "^3.8.9",
+    "@hookform/resolvers": "^3.3.4",
+    "date-fns": "^2.30.0",
+    "fast-equals": "^5.0.1",
+    "immer": "^10.0.3",
+    "jotai": "^2.6.0",
+    "next-image-export-optimizer": "^1.12.3",
+    "normalize.css": "^8.0.1",
+    "numbro": "^2.4.0",
+    "qs": "^6.11.2",
+    "sharp": "^0.33.3",
+    "throttle-debounce": "^5.0.0",
+    "validator": "^13.11.0",
+    "zod": "^3.22.4",
+    "lucide-react": "^0.395.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
